# motion-lore-ballet

./: .gitignore  README.md  pyproject.toml  vercel.json
backend/: .env.example  config.py  dynamo.py  gemini.py  groq_utils.py  main.py  models.py  requirements.txt  storage.py  test_backend.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/analyse/: route.ts
frontend/app/api/analyze/: route.ts
frontend/app/api/job/[job_id]/: route.ts
frontend/app/api/subtitles/[video_id]/: route.ts
frontend/app/components/: SparkleSpinner.tsx  Stage.tsx
frontend/app/health/: route.ts
frontend/app/processing/: page.tsx
frontend/app/results/: page.tsx
