[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.36",
    "fastapi>=0.138.1",
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[tool.vercel]
entrypoint = "backend.main:app"
